各URLエンドポイントと画面モックを用意

--- a/static/template/account_search.html
+++ b/static/template/account_search.html
@@ -1,13 +1,13 @@
 	
-{{define "top"}}
+{{define "account_search"}}
 <!DOCTYPE html>
 <html lang="jp">
 <head>
     <meta charset="UTF-8">
-    <title>イベント運営ちゃん(Congratulations on your marriage f)</title>
+    <title>アカウント検索・デバッグ</title>
 </head>
 <body>
-    <div>リリーさん、おめでとう。　家庭の運営頑張ってね。</div>
+    <div>アカウント検索・デバッグ</div>
     <table border="1">
         <tr>
             <td>マスターデータ配信設定</td>
@@ -20,7 +20,7 @@
             <td><a href="/account_search">アカウント検索・デバッグ</a></td>
         </tr>
         <tr>
-            <td>履歴確認</td>
+            <td><a href="/log_search">履歴確認</a></td>
         </tr>
     </table>    
 </body>
